--- a/publication.htm
+++ b/publication.htm
@@ -119,15 +119,20 @@ function myFunction() {
 <h3><font color="#002F6C">Recent Preprints</font></h3>
 * indicates authors with equal contributions. # indicates co-corresponding authors. Underscored are lab members.
 <ol style="padding-left: 24px; line-height: 1.6;">
-<li><p><a href="https://www.biorxiv.org/content/10.1101/2021.06.07.447388v1" target="_blank">Cell-specific chromatin landscape of human coronary artery resolves regulatory mechanisms of disease risk</a><br>
-Adam W. Turner*, <u>Sheng'en Hu</u>*, Jose Verdezoto Mosquera, Wei Feng Ma, Chani Hodonsky, Doris Wong, Gaelle Auguste, Katia Sol-Church, Emily A. Farber, Soumya Kundu, Anshul B. Kundaje, Nicolas G. Lopez, Lijiang Ma, Saikat Kumar B. Ghosh, Suna Onengut-Gumuscu, Euan A. Ashley, Thomas Quertermous, Aloke V. Finn, Nicholas J. Leeper, Jason C. Kovacic, Johan L.M. Bjorkegren, <u>Chongzhi Zang</u><sup>#</sup>, Clint L. Miller<sup>#</sup>
+<li><p><a href="https://www.biorxiv.org/content/10.1101/2021.10.22.465530v1" target="_blank">Accurate estimation of intrinsic biases for improved analysis of chromatin accessibility sequencing data using SELMA</a><br>
+<u>Shengen Shawn Hu</u>, Lin Liu, Qi Li, <u>Wenjing Ma</u>, Michael J. Guertin, Clifford A. Meyer, Ke Deng, Tingting Zhang, <u>Chongzhi Zang</u>
 <br>
-<b>bioRxiv</b>, doi: <a href="https://www.biorxiv.org/content/10.1101/2021.06.07.447388v1" target="_blank">https://doi.org/10.1101/2021.06.07.447388</a> (2021)
+<b>bioRxiv</b>, doi: <a href="https://www.biorxiv.org/content/10.1101/2021.10.22.465530v1" target="_blank">https://doi.org/10.1101/2021.10.22.465530</a> (2021)
 </p></li>
 <li><p><a href="https://www.biorxiv.org/content/10.1101/2021.09.22.461437v1" target="_blank">Nonparametric interrogation of transcriptional regulation in single-cell RNA and chromatin accessibility multiomic data</a><br>
 Yuriko Harigaya, Zhaojun Zhang, <u>Hongpan Zhang</u>, <u>Chongzhi Zang</u>, Nancy R Zhang<sup>#</sup>, Yuchao Jiang<sup>#</sup>
 <br>
 <b>bioRxiv</b>, doi: <a href="https://www.biorxiv.org/content/10.1101/2021.09.22.461437v1" target="_blank">https://doi.org/10.1101/2021.09.22.461437</a> (2021)
+</p></li>
+<li><p><a href="https://www.biorxiv.org/content/10.1101/2021.06.07.447388v1" target="_blank">Cell-specific chromatin landscape of human coronary artery resolves regulatory mechanisms of disease risk</a><br>
+Adam W. Turner*, <u>Sheng'en Hu</u>*, Jose Verdezoto Mosquera, Wei Feng Ma, Chani Hodonsky, Doris Wong, Gaelle Auguste, Katia Sol-Church, Emily A. Farber, Soumya Kundu, Anshul B. Kundaje, Nicolas G. Lopez, Lijiang Ma, Saikat Kumar B. Ghosh, Suna Onengut-Gumuscu, Euan A. Ashley, Thomas Quertermous, Aloke V. Finn, Nicholas J. Leeper, Jason C. Kovacic, Johan L.M. Bjorkegren, <u>Chongzhi Zang</u><sup>#</sup>, Clint L. Miller<sup>#</sup>
+<br>
+<b>bioRxiv</b>, doi: <a href="https://www.biorxiv.org/content/10.1101/2021.06.07.447388v1" target="_blank">https://doi.org/10.1101/2021.06.07.447388</a> (2021)
 </p></li>
 </ol>
 <hr>
@@ -351,7 +356,7 @@ Zhibin Wang*, <u>Chongzhi Zang</u>*, Jeffrey A. Rosenfeld*, Dustin E. Schones, A
 <i><b>Nature Genetics</b></i> 40, 897&ndash;903 (2008)
 </p></li></ol>
 <hr>
-<p align="right">Last modified: September 30, 2021</p>
+<p align="right">Last modified: October 24, 2021</p>
 </div>
 
 </body></html>
