--- a/software.htm
+++ b/software.htm
@@ -120,6 +120,12 @@ ul.topnav li.icon {display: none;}
 </p></td>
 </tr>
 <tr>
+<td style="width:120px; height:120px"><a href="https://github.com/zang-lab/SELMA" target="_blank"><img src="images/selma_logo.jpg" style="width:100px"></a></td>
+<td><p>
+<b><a href="https://github.com/zang-lab/SELMA" target="_blank">SELMA</a></b> (<u>S</u>implex <u>E</u>ncoded <u>L</u>inear <u>M</u>odel for <u>A</u>ccessible chromatin), a computational model for estimation and correction of intrinsic enzymatic cleavage biases in chromatin accessibility profiling (DNase-seq and ATAC-seq) data. [<a href="https://github.com/zang-lab/SELMA" target="_blank">Package</a>] [<a href="https://www.biorxiv.org/content/10.1101/2021.10.22.465530v1" target="_blank">Preprint</a>]
+</p></td>
+</tr>
+<tr>
 <td style="width:120px; height:120px"><a href="https://zanglab.github.io/SICER2" target="_blank"><img src="images/sicer_logo.jpg" style="width:100px"></a></td>
 <td><p>
 <b><a href="https://zanglab.github.io/SICER2" target="_blank">SICER</a></b> (<u>S</u>patial-clustering <u>I</u>dentification of <u>C</u>hIP-<u>E</u>nriched <u>R</u>egions), a ChIP-Seq data analysis method. [<a href="http://home.gwu.edu/~wpeng/Software.htm" target="_blank">Package (v1.1)</a>] [<a href="https://academic.oup.com/bioinformatics/article/25/15/1952/212783" target="_blank">Publication</a>]<br><br>
@@ -135,12 +141,12 @@ ul.topnav li.icon {display: none;}
 <tr>
 <td style="width:120px; height:120px"><a href="bartcancer" target="_blank"><img src="images/bartcancer_logo.jpg" style="width:100px"></a></td>
 <td><p>
-<b><a href="bartcancer" target="_blank">BART Cancer</a></b>, a database resource for computationally predicted transcriptional regulator activities in 15 human cancers from The Cancer Genome Atlas (TCGA). [<a href="bartcancer" target="_blank">Web resource</a>] [<a href="https://www.biorxiv.org/content/10.1101/2020.12.17.423327v1" target="_blank">Preprint</a>]
+<b><a href="bartcancer" target="_blank">BART Cancer</a></b>, a database resource for computationally predicted transcriptional regulator activities in 15 human cancers from The Cancer Genome Atlas (TCGA). [<a href="bartcancer" target="_blank">Web resource</a>] [<a href="https://academic.oup.com/narcancer/article/3/1/zcab011/6180061" target="_blank">Publication</a>]
 </p></td>
 </tr>
 </table>
 <hr>
-<p align="right">Last modified: March 16, 2021</p>
+<p align="right">Last modified: October 24, 2021</p>
 </div>
 
 </body></html>
