--- a/research.htm
+++ b/research.htm
@@ -127,6 +127,7 @@ function myFunction() {
 <h3><font color="#002F6C">News Releases</font></h3>
 <ul style="list-style-type:disc; padding-left: 24px; line-height: 1.6;"><p>
 <li><a href="https://news.virginia.edu/content/uva-develops-new-tools-battle-cancer-advance-genomics-research" target="_blank">UVA Develops New Tools to Battle Cancer, Advance Genomics Research</a>. <!--UVA Today. -->May 25, 2021</li>
+<li><a href="https://news.virginia.edu/content/uva-honors-distinguished-researchers-virtual-awards-event" target="_blank">UVA Honors Distinguished Researchers at Virtual Awards Event</a>. <!--UVA Today. -->January 29, 2021</li>
 <li><a href="https://news.virginia.edu/content/cancers-dangerous-renovations-our-chromosomes-revealed" target="_blank">Cancer’s Dangerous Renovations to Our Chromosomes Revealed</a>. <!--UVA Today. -->October 26, 2020</li>
 </p></ul>
 <hr>
