--- a/research.htm
+++ b/research.htm
@@ -159,7 +159,7 @@ Data-driven discovery has become a new paradigm of biological research. By model
 <br><br>
 <hr>
 <h3><font color="#002F6C">Collaborations</font></h3>
-<p style="line-height: 1.6;">Computational biology is an interdisciplinary science. It cannot thrive without close collaboration between researchers with different backgrounds and expertises. We have established a collaborative team and a cross-disciplinary environment in the lab, and we always commit to collaborations and team science on a variety of research projects with experimental biologists, clinicians, as well as statisticians, computer scientists, mathematicians, and physicists.</p>
+<p style="line-height: 1.6;">Computational biology is an interdisciplinary science. It cannot thrive without close collaboration between researchers with different backgrounds and expertises. We always commit to collaborations and team science with experimental biologists, clinicians, as well as statisticians, computer scientists, mathematicians, and physicists. We study functional epigenetics and transcriptional regulation in a variety of biological systems and human diseases, including T-cell immunity, malignant peripheral nerve sheath tumor (MPNST), acute myeloid leukemia (AML), T-cell acute lymphoblastic leukemia (T-ALL), colorectal cancer, coronary artery disease, development, physical activity (with <a href="https://www.motrpac.org/" target="_blank">MoTrPAC</a>), and environmental health, etc.</p>
 <p style="line-height: 1.6;">Our collaborators include:
 </p>
 <ul style="list-style-type:disc; padding-left: 24px; line-height: 1.6;"><p>
