--- a/index.htm
+++ b/index.htm
@@ -159,7 +159,9 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
-		Zhenjia's collaboration work with the Hao Jiang Lab is published in <a href="https://www.nature.com/articles/s41586-021-03903-7" target="_blank"><i>Nature</i></a>!
+		First-year BIMS PhD student Zhaoxia Ma joins the lab. Welcome Zhaoxia!
+		<br><br>
+		Zhenjia's collaboration work with the Hao Jiang Lab is published in <a href="https://www.nature.com/articles/s41586-021-03903-7" target="_blank"><i><b>Nature</b></i></a>!
 		<br><br>
 		Shawn and Mengxue each presents a poster at Cold Spring Harbor Meetings on Mechanisms of Eukaryotic Transcription and Eukaryotic DNA Replication & Genome Maintenance. 
 		</p>
@@ -236,9 +238,9 @@ function myFunction() {
 		<p>
 		Chongzhi gives an invited talk at Duke University's <a href="https://genome.duke.edu/education/cbb/computational-biology-seminar" target="_blank">Center for Genomic and Computational Biology</a>.
 		<br><br>
-		Zhenjia's BART3D paper is accepted to <a href="https://doi.org/10.1093/bioinformatics/btab173" target="_blank"><i>Bioinformatics</i></a>!
+		Zhenjia's BART3D paper is accepted to <a href="https://doi.org/10.1093/bioinformatics/btab173" target="_blank"><i><b>Bioinformatics</b></i></a>!
 		<br><br>
-		Wenjing and Zhenjia's BARTweb paper is accepted to <a href="https://doi.org/10.1093/nargab/lqab022" target="_blank"><i>NAR Genomics and Bioinformatics</i></a>!
+		Wenjing and Zhenjia's BARTweb paper is accepted to <a href="https://doi.org/10.1093/nargab/lqab022" target="_blank"><i><b>NAR Genomics and Bioinformatics</b></i></a>!
 		</p>
 	</div>
 </div>
@@ -250,7 +252,7 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
-		Zack's paper on <a href="https://zanglab.github.io/bartcancer/" target="_blank">BART Cancer web resource</a> is accepted to <a href="https://academic.oup.com/narcancer/article/3/1/zcab011/6180061" target="_blank"><i>NAR Cancer</i></a>!
+		Zack's paper on <a href="https://zanglab.github.io/bartcancer/" target="_blank">BART Cancer web resource</a> is accepted to <a href="https://academic.oup.com/narcancer/article/3/1/zcab011/6180061" target="_blank"><i><b>NAR Cancer</b></i></a>!
 		</p>
 	</div>
 </div>
@@ -270,7 +272,7 @@ function myFunction() {
 		<p>
 		Three new members join the lab: BIMS rotations student Jamel Simpson, postdoctoral associates Qingying Chen and Billy Lamberti! Welcome Jamel, Qingying, and Billy!
 		<br><br>
-		The <a href="https://link.springer.com/journal/40484/volumes-and-issues/8-4" target="_blank"><i>Quantitative Biology</i></a> journal features Chongzhi's <a href="https://doi.org/10.1007/s40484-020-0225-2" target="_blank">recent publication</a> with a <a href="https://journal.hep.com.cn/qb/EN/volumn/volumn_3790.shtml" target="_blank">cover image</a>.
+		The <a href="https://link.springer.com/journal/40484/volumes-and-issues/8-4" target="_blank"><i><b>Quantitative Biology</b></i></a> journal features Chongzhi's <a href="https://doi.org/10.1007/s40484-020-0225-2" target="_blank">recent publication</a> with a <a href="https://journal.hep.com.cn/qb/EN/volumn/volumn_3790.shtml" target="_blank">cover image</a>.
 		</p>
 	</div>
 </div>
@@ -300,9 +302,9 @@ function myFunction() {
 		<p>
 		Zhenjia gives a talk at <a href="images/ES_Symposium_Flyer_Fall2020-ZWang-30Sept20.pdf" target="_blank">Emerging Scholars in Genome Sciences Symposium Series</a> organized by CPHG.
 		<br><br>
-		Our cancer CTCF paper is published in <a href="https://doi.org/10.1186/s13059-020-02152-7" target="_blank"><i>Genome Biology</i></a>. Congratulations Zhenjia!
+		Our cancer CTCF paper is published in <a href="https://doi.org/10.1186/s13059-020-02152-7" target="_blank"><i><b>Genome Biology</b></i></a>. Congratulations Zhenjia!
 		<br><br>
-		Our collaboration paper on histone H3 variant activity with Chunyuan Jin and Max Costa at NYU is published in <a href="https://doi.org/10.1016/j.isci.2020.101518" target="_blank"><i>iScience</i></a>. Congratulations Zhenjia, Wuwei and Rongquan!
+		Our collaboration paper on histone H3 variant activity with Chunyuan Jin and Max Costa at NYU is published in <a href="https://doi.org/10.1016/j.isci.2020.101518" target="_blank"><i><b>iScience</b></i></a>. Congratulations Zhenjia, Wuwei and Rongquan!
 		</p>
 	</div>
 </div>
@@ -370,7 +372,7 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
-		Shawn's paper in collaboration with the Hai-Hui Xue Lab is published in <a href="https://www.nature.com/articles/s41423-020-0436-5" target="_blank"><i>Cellular & Molecular Immunology</i></a>!
+		Shawn's paper in collaboration with the Hai-Hui Xue Lab is published in <a href="https://www.nature.com/articles/s41423-020-0436-5" target="_blank"><i><b>Cellular & Molecular Immunology</b></i></a>!
 		<br><br>
 		Mengxue Tian and Hongpan Zhang accept offers from the Biomedical Sciences (BIMS) graduate program and will start PhD studies in the lab this fall. Welcome again Mengxue and Hongpan!
 		</p>
@@ -398,7 +400,7 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
-		Zhenjia's collaboration project with the Suresh Cuddapah lab is published in <a href="https://epigeneticsandchromatin.biomedcentral.com/articles/10.1186/s13072-019-0324-3" target="_blank"><i>Epigenetics & Chromatin</i></a>.
+		Zhenjia's collaboration project with the Suresh Cuddapah lab is published in <a href="https://epigeneticsandchromatin.biomedcentral.com/articles/10.1186/s13072-019-0324-3" target="_blank"><i><b>Epigenetics & Chromatin</b></i></a>.
 		</p>
 	</div>
 </div>
@@ -615,7 +617,7 @@ UVA rising second-year student Alexander An joins the lab. Welcome Alex!
 		</p>
 	</div>
 	<div class="column right">
-		<p>Zhenjia's <a href="https://academic.oup.com/bioinformatics/advance-article-abstract/doi/10.1093/bioinformatics/bty194/4956015" target="_blank">BART paper</a> is accepted to <i>Bioinformatics</i>!</p>
+		<p>Zhenjia's <a href="https://academic.oup.com/bioinformatics/advance-article-abstract/doi/10.1093/bioinformatics/bty194/4956015" target="_blank">BART paper</a> is accepted to <i><b>Bioinformatics</b></i>!</p>
 	</div>
 </div>
 <div class="row" style="line-height: 1.6;">
