--- a/publication.htm
+++ b/publication.htm
@@ -146,7 +146,7 @@ Bi Shi*, Wei Li*, Yansu Song*, <u>Zhenjia Wang</u>*, Rui Ju, Aleksandra Ulman, J
 <li><p><a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/gcc.22993" target="_blank">Assessing acute myeloid leukemia susceptibility in rearrangement-driven patients by DNA breakage at topoisomerase II and CCCTC-binding factor/cohesin binding sites</a><br> 
 Naomi D. Atkin, Heather M. Raimer, <u>Zhenjia Wang</u>, <u>Chongzhi Zang</u>, Yuh-Hwa Wang
 <br>
-<i><b>Genes, Chromosomes & Cancer</b></i>, <a href="https://doi.org/10.1002/gcc.22993" target="_blank">doi:10.1002/gcc.22993</a> (2021)
+<i><b>Genes, Chromosomes & Cancer</b></i> 60, 808&ndash;821 (2021)
 </p></li>
 <li><p><a href="https://doi.org/10.1093/nargab/lqab022" target="_blank">BARTweb: a web server for transcriptional regulator association analysis</a><br> 
 <u>Wenjing Ma</u>*, <u>Zhenjia Wang</u>*, <u>Yifan Zhang</u>, Neal E Magee, <u>Yayi Feng</u>, <u>Ruoyao Shi</u>, Yang Chen, <u>Chongzhi Zang</u>
