--- a/index.htm
+++ b/index.htm
@@ -147,6 +147,10 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
+		Shawn gives a seminar talk at <a href="images/ES_Symposium_Flyer_Fall2021-S.Hu-10Nov2021.pdf" target="_blank">Emerging Scholars in Genome Sciences Symposium</a> organized by CPHG.
+		<br><br>
+		Press release about Zhenjia's Nature paper with the Hao Jiang Lab is featured at <a href="https://news.virginia.edu/content/uva-reveals-how-gene-mutation-boosts-cancer-risk" target="_blank"><b>UVA Today</b></a>.
+		<br><br>
 		Ben gives a presentation at the MoTrPAC consortium subcommittee virtual meeting.
 		</p>
 	</div>
@@ -732,7 +736,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: November 2, 2021</p>
+<p align="right">Last modified: November 10, 2021</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
