--- a/index.htm
+++ b/index.htm
@@ -149,7 +149,7 @@ function myFunction() {
 		<p>
 		Shawn gives a seminar talk at <a href="images/ES_Symposium_Flyer_Fall2021-S.Hu-10Nov2021.pdf" target="_blank">Emerging Scholars in Genome Sciences Symposium</a> organized by CPHG.
 		<br><br>
-		Press release about Zhenjia's Nature paper with the Hao Jiang Lab is featured at <a href="https://news.virginia.edu/content/uva-reveals-how-gene-mutation-boosts-cancer-risk" target="_blank"><b>UVA Today</b></a>.
+		Press release about Zhenjia's <i>Nature</i> paper with the Hao Jiang Lab is featured at <a href="https://news.virginia.edu/content/uva-reveals-how-gene-mutation-boosts-cancer-risk" target="_blank"><b>UVA Today</b></a>.
 		<br><br>
 		Ben gives a presentation at the MoTrPAC consortium subcommittee virtual meeting.
 		</p>
