--- a/people.htm
+++ b/people.htm
@@ -191,23 +191,23 @@ Website: <a href="https://czang.github.io/" target="_blank">czang.github.io</a><
 Dr. Chongzhi Zang is an Assistant Professor in the Center for Public Health Genomics, University of Virginia School of Medicine. He holds faculty appointments in the Departments of Public Health Sciences, Biochemistry and Molecular Genetics, and Biomedical Engineering at UVA. He is also a faculty member of the UVA Cancer Center and the UVA Data Science Institute. Chongzhi received his BS in physics from Peking University and PhD in physics from the George Washington University. He did his undergraduate research in high-field laser physics with <a href="http://highfield.iphy.ac.cn/member_detail_z.html" target="_blank">Jie Zhang</a> at the Institute of Physics, Chinese Academy of Sciences, and his PhD research in computational biophysics with <a href="http://home.gwu.edu/~wpeng/" target="_blank">Weiqun Peng</a> and <a href="https://www.nhlbi.nih.gov/science/epigenome-biology/people/zhao-keji" target="_blank">Keji Zhao</a> at the National Institutes of Health. Prior to joining UVA, he completed his postdoctoral training with <a href="http://liulab.dfci.harvard.edu" target="_blank">Xiaole Shirley Liu</a> at Harvard University's Dana-Farber Cancer Institute. Chongzhi is a computational biologist with expertise in cancer epigenomics. His research focuses on algorithm development for high-throughput genomic data analytics and integrative modeling of gene regulatory networks in mammalian cell systems.
 </p><br>
 <hr>
-<h3><font color="#002F6C">Research Scientist</font></h3>
+<h3><font color="#002F6C">Research Scientists</font></h3>
 <p style="line-height: 1.6;">
 <img align="right" src="images/zhenjia_wang.jpg" style="width:180px">
 <b>Zhenjia Wang, PhD</b>
 <a href="mailto:zhenjia@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Zhenjia joined the lab as a postdoctoral research associate in January 2017 and have been a research scientist since June 2021. She received her PhD in bioinformatics from School of Mathematics, Shandong University in China. She is working on integration of publicly available transcription factor ChIP-seq data for studying functional gene regulation, and integration of RNA-seq data with ChIP-seq data for studying epigenetic mechanisms of cancer.
-</p><br>
-<hr>
-<h3><font color="#002F6C">Postdoctoral Associates</font></h3>
+</p><br><br>
 <p style="line-height: 1.6;">
 <img align="right" src="images/shengen_hu.jpg" style="width:180px">
 <b>Sheng'en Shawn Hu, PhD</b>
 <a href="mailto:sh8tv@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
-Dr. Sheng'en Shawn Hu is a postdoctoral research associate starting November 2017. Before joining UVA, he completed his PhD training in bioinformatics from School of Life Science and Technology, Tongji University in China, and was a visiting student at Harvard University. He is working on developing computatinoal methodology of integrating high-throughput chromatin accessibility data for studying functional gene regulation.
-</p><br><br><br>
+Dr. Sheng'en Shawn Hu becomes a research scientist after postdoctoral training in the lab. Before joining UVA in November 2017, he completed his PhD training in bioinformatics from School of Life Science and Technology, Tongji University in China, and was a visiting student at Harvard University. He is working on developing computatinoal methodology of integrating high-throughput chromatin accessibility data for studying functional gene regulation.
+</p><br><br>
+<hr>
+<h3><font color="#002F6C">Postdoctoral Associates</font></h3>
 <p style="line-height: 1.6;">
 <img align="right" src="images/qingying_chen.jpg" style="width:180px">
 <b>Qingying Chen, PhD</b>
@@ -565,7 +565,7 @@ Sonnet is a current student at Troy High School (class of 2023) in Michigan inte
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: October 12, 2021</p>
+<p align="right">Last modified: November 15, 2021</p>
 
 </div>
 
