--- a/research.htm
+++ b/research.htm
@@ -177,7 +177,7 @@ Data-driven discovery has become a new paradigm of biological research. By model
 <li><a href="https://campuspress.yale.edu/wanglab/" target="_blank"><font color="#002F6C">Siyuan Steven Wang</font></a>, Department of Genetics, Yale University</li>
 <li><a href="https://med.virginia.edu/yuh-hwa-wang-lab/" target="_blank"><font color="#002F6C">Yuh-Hwa Wang</font></a>, Department of Biochemistry and Molecular Genetics, University of Virginia</li>
 <li><a href="https://hmh-cdi.org/our-team/xue-lab/" target="_blank"><font color="#002F6C">Hai-Hui Xue</font></a>, Center for Discovery and Innovation, Hackensack University Medical Center</li>
-<li><a href="https://www.cvrc.virginia.edu/Yan/" target="_blank"><font color="#002F6C">Zhen Yan</font></a>, Center for Skeletal Muscle Research, Robert M. Berne Cardiovascular Research Center, University of Virginia</li>
+<li><a href="https://training.cvrc.virginia.edu/Yan/" target="_blank"><font color="#002F6C">Zhen Yan</font></a>, Center for Skeletal Muscle Research, Robert M. Berne Cardiovascular Research Center, University of Virginia</li>
 <li><a href="https://engineering.virginia.edu/faculty/aidong-zhang" target="_blank"><font color="#002F6C">Aidong Zhang</font></a>, Department of Computer Science, University of Virginia</li>
 <li><a href="https://www.stat.pitt.edu/people/tingting-zhang" target="_blank"><font color="#002F6C">Tingting Zhang</font></a>, Department of Statistics, University of Pittsburgh</li>
 <li><a href="https://zhulab.wordpress.com/" target="_blank"><font color="#002F6C">Yuan Zhu</font></a>, Children's Research Institute, Children’s National Medical Center</li>
