--- a/research.htm
+++ b/research.htm
@@ -213,7 +213,7 @@ Data-driven discovery has become a new paradigm of biological research. By model
 <div class="column">
 <p>
 <br>
-<a href="http://jktgfoundation.org/" target="_blank"><img align="center" src="images/jktg.png" style="width:110px"></a>
+<a href="https://www.jktgfoundation.org/" target="_blank"><img align="center" src="images/jktg.png" style="width:110px"></a>
 </p>
 </div>
 </div>
