--- a/teaching.htm
+++ b/teaching.htm
@@ -87,8 +87,13 @@ ul.topnav li.icon {display: none;}
 
 <h2 align="center"><font color="#002F6C">Teaching</font></h2>
 <hr>
+<h3><font color="#002F6C">BIMS 8601: Computational Genomics</font></h3>
+<p style="line-height: 1.6;">
+<a href="https://cphg.github.io/compgen/" target="_blank">Spring 2022: Course website</a></p>
+</p>
+<hr>
 <h3><font color="#002F6C">BIOC 8145: Bioinformatics and Functional Analysis of Genomes</font></h3>
-<p style="line-height: 1.6;">Spring 2020 Lectures: Analysis of ChIP-seq data</p>
+<p style="line-height: 1.6;">Spring 2020: Module: Analysis of ChIP-seq data</p>
 <p style="text-indent:100px; line-height: 1.6;">
 	Lecture 1: ChIP-seq overview and data analysis strategy. <a href="https://youtu.be/FRunfJxdzOw" target="_blank">[Video]</a> <a href="slides/BIOC8145_2020_Zang_ChIPseq_1.pdf" target="_blank">[Slides]</a></p>
 <p style="text-indent:100px; line-height: 1.6;">
@@ -97,7 +102,7 @@ ul.topnav li.icon {display: none;}
 	Lecture 3: ChIP-seq data interpretation and resources. <a href="https://youtu.be/Eo43Hlb6s1E" target="_blank">[Video]</a> <a href="slides/BIOC8145_2020_Zang_ChIPseq_3.pdf" target="_blank">[Slides]</a>
 </p>
 <hr>
-<h3><font color="#002F6C">PHS 5705 / BIMS 8075 / BIOC 5705: Recent Advances in Public Health Genomics</font></h3>
+<h3><font color="#002F6C">BIMS 8075 / BIOC 5705 / PHS 5705: Recent Advances in Public Health Genomics</font></h3>
 <p style="line-height: 1.6;">Spring 2021 Lecture: The epigenome: Transcription factors and histone modifications. <a href="https://youtu.be/YHVDeElYaAo" target="_blank">[Video]</a> <a href="slides/PHS5705_2021_Zang_Epigenome.pdf" target="_blank">[Slides]</a>
 </p>
 <p style="line-height: 1.6;">Spring 2020 <a href="slides/PHS5705_2020_Zang_Epigenome.pdf" target="_blank">Lecture: The epigenome: Transcription factors and histone modifications</a>
@@ -117,7 +122,7 @@ ul.topnav li.icon {display: none;}
 <a href="slides/ChIPseq_SICER_CZ.pdf" target="_blank">Lecture slides: Analyzing ChIP-seq data with SICER</a>
 </p>
 <hr>
-<p align="right">Last modified: April 20, 2021</p>
+<p align="right">Last modified: December 16, 2021</p>
 </div>
 
 </body></html>
