--- a/teaching.htm
+++ b/teaching.htm
@@ -87,7 +87,7 @@ ul.topnav li.icon {display: none;}
 
 <h2 align="center"><font color="#002F6C">Teaching</font></h2>
 <hr>
-<h3><font color="#002F6C">BIMS 8601: Computational Genomics</font></h3>
+<h3><font color="#002F6C">BIMS 8601: Foundations of Computational Genomics</font></h3>
 <p style="line-height: 1.6;">
 <a href="https://cphg.github.io/compgen/" target="_blank">Spring 2022: Course website</a></p>
 </p>
