--- a/index.htm
+++ b/index.htm
@@ -142,6 +142,18 @@ function myFunction() {
 <div class="row" style="line-height: 1.6;">
 	<div class="column left">
 		<p>
+		<font color="#002F6C">January 2022</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		Shawn's paper in collaboration with the Hai-Hui Xue Lab is accepted to <!--<a href="https://www.nature.com/articles/s41423-020-0436-5" target="_blank">--><i><b>Nature Immunology</b></i><!--</a>-->!
+		</p>
+	</div>
+</div>
+<div class="row" style="line-height: 1.6;">
+	<div class="column left">
+		<p>
 		<font color="#002F6C">November 2021</font>
 		</p>
 	</div>
@@ -736,7 +748,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: November 10, 2021</p>
+<p align="right">Last modified: January 10, 2022</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
